# dsmview

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
dsmview/: cli.py
dsmview/collectors/: __init__.py  base.py  disks.py  logs.py  network.py  services.py  storage.py  system.py
dsmview/ssh/: __init__.py  connection.py  executor.py
dsmview/ui/: __init__.py  app.py  theme.py
dsmview/ui/tabs/: __init__.py  dashboard.py  disks.py  logs.py  services.py
dsmview/ui/widgets/: __init__.py  braille_graph.py  meter_bar.py  service_list.py
